# zas

./: .env  .env.example  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.env  Makefile  README.md  README.rst  backup.yml  compose-dev.yml  dev.yml  development.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  migrate.yml  mypy.ini  prod.yml  pyproject.toml  readme.md  restore.yml  workspace.code-workspace
.github/workflows/: lib-environment-test.yml  pre-commit.yml
backup/: Dockerfile  backup-dev.yml  backup-prod.yml  backup.py  backup_cron.txt  dev.yml  readme.md
config/: Dockerfile  backup_config.py  jinja2.py  migrate_config.py  mongo-express.env  mongod.yml  nginx.conf  nginx.conf.prod  readme.md  restore_config.py  settings.py  urls.py  zas.cfg
config/adds/: authorized_keys  sshd_config
extra/: letsencrypt_renew.sh
jinja2/account/: logout.j2
jinja2/common/macros/: fields.j2
jinja2/profiles/: profile.j2
jinja2/socialaccount/: authentication_error.j2
lib/environment/: .flake8  Dockerfile  README.md  mypy.ini  pyproject.toml  pytest.ini  setup.cfg
lib/environment/environment/: helpers.py
lib/environment/tests/: test_helpers.py
logs/backup/: .gitignore
migrate/: Dockerfile  dev.yml  migrate.py  prod.yml
nginx/: nginx.conf
profiles/: __init__.py  admin.py  forms.py  models.py  signals.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
rancheros/: cloud_config.yml
restore/: Dockerfile  dev.yml  prod.yml  readme.md  restore.py
templates/account/: base.html
templates_jinja/: base.j2
templates_jinja/profiles/: home.j2
templates_jinja/socialaccount/: authentication_error.html  login.html  login_cancelled.j2
tests/: test_zas.py
web/: Dockerfile  config.json  config.py  requirements.txt
web/app/: __init__.py  assets.py  forms.py  helper.py  models.py  views.py
web/app/forms/: events.py  offices.py  profile.py  ranks.py  registration.py
web/app/forms/validators/: events.py  general.py  offices.py
web/app/lib/: sqm.py
web/app/lib/wtformsparsleyjs/: core.py
web/app/models/: badges.py  events.py  offices.py  posts.py  ranks.py  raw_attendance.py  slack.py  users.py
web/app/static/: style.css
web/app/static/css/: style.css
web/app/static/css/lib/: bootstrap-theme.css  bootstrap.css
web/app/static/js/: main.js  parsleyjs_config.js
web/app/static/js/lib/: bootstrap.js
web/app/static/xml/: squad.dtd  za_logo.paa
web/app/templates/: base.html  create_profile.html  home.html  layout.html  login.html  other.html
web/app/templates/events/: _event_helpers.html  create.html  create_any.html  edit.html  event.html
web/app/templates/offices/: create.html  create_office.html  edit_head.html  edit_member_resp.html  edit_members.html  edit_resp.html  edit_sop.html  office.html
web/app/templates/old/: base.html  create_profile.html  home.html
web/app/templates/profile/: all.html  create_profile.html  squad.xml  update_email.html  update_name.html  update_ts_id.html  update_xml_display.html  view.html
web/app/templates/public/: home.html  rules.html
web/app/templates/ranks/: all.html  assign.html  create.html  edit.html  rank.html
web/app/templates/util/: _datetime.html  _formhelpers.html  _linking.html  _nav.html  _nav_select.html  _permissions.html
web/app/util/: google.py  helper.py  permission.py  slack.py  validators.py
web/app/views/: before_request.py  events.py  home.py  login.py  offices.py  profile.py  public.py  ranks.py  slack.py  views.py
web/db/dev/: main.db
zas_back/: Dockerfile  mypy.ini  pyproject.toml  pytest.ini  runserver.sh
zas_back/zas_back/: manage.py
zas_back/zas_back.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
zas_back/zas_back/events/: views.py
zas_back/zas_back/polls/: tests.py  urls.py  views.py
zas_back/zas_back/polls/management/commands/: bootstrap_admin.py
zas_back/zas_back/polls/migrations/: 0001_initial.py
zas_back/zas_back/users/: views.py
zas_back/zas_back/zas_back/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
