[tool.poetry]
name = "zas"
version = "0.1.0"
description = "Full stack site for Zulu-Alpha"
authors = ["Adam Piskorski <adam@piskorski.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"
mypy = "^0.761"
flake8-bugbear = "^20.1.4"
pytest-cov = "^2.8.1"
pre-commit = "^2.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 90
target-version = ['py38']
