[tool.poetry]
name = "zas_back"
version = "0.1.0"
description = "Backend for the Zulu-Alpha stite stack"
authors = ["Adam Piskorski <adam@piskorski.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.2"
psycopg2 = "^2.8.4"
uvicorn = "^0.11.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"
mypy = "^0.761"
flake8-bugbear = "^20.1.4"
pytest-cov = "^2.8.1"
pre-commit = "^2.0.1"
pytest-profiling = "^1.7.0"
pytest-docker-db = "^1.0.3"
pytest-django = "^3.8.0"

[tool.black]
line-length = 90
target-version = ['py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

