[tool.poetry]
name = "environment"
version = "0.1.0"
description = ""
authors = ["Adam Piskorski <adam@piskorski.me>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"
flake8-bugbear = "^21.4.3"
pytest-cov = "^2.12.1"
black = "^21.6b0"
pytest = "^6.2.4"
pytest-xdist = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ['py39']